# caruna

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  slnSopimusrekisteri.sln
.ai/: README.md  SLACK_ANNOUNCEMENT.md  pyproject.toml
.ai/agent/: cypress_e2e_tests_writer.yaml  orangit_ai_audit.yaml  orangit_auditor.yaml  orangit_coder.yaml  orangit_documenter.yaml  orangit_planner.yaml  orangit_repo_generator.yaml  orangit_reviewer.yaml  orangit_security_reviewer.yaml  orangit_tester.yaml  orangit_ui_code_reviewer.yaml  orangit_ui_reviewer.yaml  orangit_updater.yaml  orangit_upgrader.yaml  orangit_workflow.yaml
.ai/orangit_agents/: build.py
.ai/scripts/: generate-agents.sh
.ai/templates/: claude_agent.md.j2  codex_AGENTS.md.j2  copilot_agent.md.j2  cursor_rule.md.j2  opencode_agent.md.j2
.ai/tests/: test_build.py
.github/: pull_request_template.md
KT.Utils/: BankUtils.cs  CollectionColumn.cs  CollectionUtils.cs  DataUtils.cs  DateUtils.cs  DbUtils.cs  ExpressionUtils.cs  IOUtils.cs  KT.Utils.csproj  KT.Utils.sln  KeyObjectValuePair.cs  StringUtils.cs  TypeCache.cs  WebUtils.cs
O365Authentication/: MsOnlineClaimsHelper.cs  O365Authentication.csproj  WcfClientContracts.cs
Sopimusrekisteri.Controls/: DateInput.cs  DateInputValidator.cs  Sopimusrekisteri.Controls.csproj  app.config  packages.config
Sopimusrekisteri.Tests/: Sopimusrekisteri.Tests.csproj  TestLaskennallinenPaattymispvm.cs  app.config  packages.config
Sopimusrekisteri.Yllapitoajo/: App.config  Asetukset.cs  Program.cs  packages.config  (+1 more)
(+2891 files in other folders)
